 =======================================================================
 ==CHANGES.txt
 =======================================================================

Gora Change Log

trunk (current development)
* GORA-159 gora-hbase MR tests should use HBaseTestingUtility instead of deprecated HBaseClusterTestCase via GORA-89 

* GORA-89 Avoid HBase MiniCluster restarts to shorten gora-hbase tests (hsaputra, alfonso, Ioan eugen Stan)

* GORA-203 Bug in setting column field attribute "qualifier" in CassandraMapping (rmarroquin, lewismc, kazk)

* GORA-221 fix Cassandra configuration in gora-tutorial (lewismc)

* GORA-211 thread safety: fix java.lang.NullPointerException - synchronize on mutator (rherget)

* GORA-210 thread safety: fix java.util.ConcurrentModificationException (rherget)

* GORA-190 Add "version" switch to bin/gora script (lewismc)

* GORA-169 Implement correct logging for KeySpaces and attributes in CassandraMappingManager (lewismc)

* GORA-27 Optionally add license headers to generated files (lewismc + rmarroquin)

* GORA-181 Replace tab characters with correct Gora coding style (rmarroquin)

* GORA-197 gora-cassandra requires BytesType for Cassandra column family validator (kazk)

* GORA-196 OSX JDK7 failed to load snappy native library from snappy-java-1.0.4.1.jar (kazk)

* GORA-182 Nutch 2.1 does not work with gora-cassandra 0.2.1 (kazk)

* GORA-193 Make sure gora-core test dependency is always generated when packaging (lewismc)

* GORA-186 Show better errors when a field is missing in HBase mapping (Alfonso Nishikawa via hsaputra)

* GORA-179 Modify the Query interface to be Query<K, T extends Persistent> to be more precise (hsaputra)

* GORA-178 HBase fix ivy.xml to use the correct antconfig mapping (ferdy) 

* GORA-172 java.lang.ClassNotFoundException: org.apache.gora.memory.store.MemStore.MemQuery (yumeng via lewismc)

* GORA-103 Datastore for gora-dynamodb (rmarroquin via lewismc)
